fix: changes on course class and added import statements